[gd_scene load_steps=5 format=2]

[ext_resource path="res://Themes/fonts/OpenSans-Bold.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://Themes/vole_theme.tres" type="Theme" id=2]
[ext_resource path="res://Scripts/AssignmentsTeacher.gd" type="Script" id=3]

[sub_resource type="DynamicFont" id=1]
size = 30
font_data = ExtResource( 1 )

[node name="Control" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
theme = ExtResource( 2 )
script = ExtResource( 3 )
__meta__ = {
"_edit_vertical_guides_": [ 514.0 ]
}

[node name="HTTPRequest" type="HTTPRequest" parent="."]

[node name="ColorRect" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 1, 1, 0.8, 1 )

[node name="ClassroomNameLabel" type="Label" parent="ColorRect"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -411.0
margin_top = -286.0
margin_right = 416.0
margin_bottom = -225.0
grow_horizontal = 2
grow_vertical = 2
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_colors/font_outline_modulate = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 1 )
text = "Classroom Name - Assignments"
align = 1
valign = 2

[node name="BackToClassroomBtn" type="Button" parent="ColorRect"]
anchor_left = 0.49
anchor_top = 0.5
anchor_right = 0.49
anchor_bottom = 0.5
margin_left = -451.76
margin_top = -111.0
margin_right = -201.76
margin_bottom = -61.0
text = "Back To Classrooms"

[node name="CreateAssignmentBtn" type="Button" parent="ColorRect"]
anchor_left = 0.49
anchor_top = 0.5
anchor_right = 0.49
anchor_bottom = 0.5
margin_left = -451.76
margin_top = -21.0
margin_right = -201.76
margin_bottom = 29.0
rect_pivot_offset = Vector2( 280, 40 )
text = "Add new assignment"

[node name="ColorRect" type="ColorRect" parent="ColorRect"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -113.0
margin_top = -111.0
margin_right = 460.0
margin_bottom = 249.0
color = Color( 0.827451, 0.827451, 0.827451, 1 )

[node name="AssignmentNameVBox" type="VBoxContainer" parent="ColorRect/ColorRect"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -281.5
margin_top = -148.0
margin_right = -99.5
margin_bottom = 180.0
rect_pivot_offset = Vector2( -702, 13 )
custom_constants/separation = 9

[node name="Label" type="Label" parent="ColorRect/ColorRect/AssignmentNameVBox"]
margin_right = 182.0
margin_bottom = 23.0
autowrap = true

[node name="AssignmentDescVBox" type="VBoxContainer" parent="ColorRect/ColorRect"]
margin_left = 214.0
margin_top = 32.0
margin_right = 473.0
margin_bottom = 359.0
rect_pivot_offset = Vector2( -702, 13 )
custom_constants/separation = 9

[node name="Label" type="Label" parent="ColorRect/ColorRect/AssignmentDescVBox"]
margin_right = 259.0
margin_bottom = 75.0
text = "jeg har fået koblet næsten alt op med classroom, med undtagelse af student/leave."
autowrap = true

[node name="SubmissionsVBox" type="VBoxContainer" parent="ColorRect/ColorRect"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = 187.5
margin_top = -148.0
margin_right = 285.5
margin_bottom = 180.0

[node name="ClassroomNameTitle" type="Label" parent="ColorRect/ColorRect"]
margin_left = 6.0
margin_right = 214.0
margin_bottom = 30.0
text = "Assignment Name"
valign = 1

[node name="JoinCodeTitle" type="Label" parent="ColorRect/ColorRect"]
margin_left = 218.0
margin_right = 473.0
margin_bottom = 30.0
text = "Assignment Description"
valign = 1

[node name="ViewMoreTitle" type="Label" parent="ColorRect/ColorRect"]
margin_left = 472.0
margin_top = 1.0
margin_right = 573.0
margin_bottom = 31.0
text = "Submissions"
valign = 1

[node name="ColorRect2" type="ColorRect" parent="ColorRect/ColorRect"]
margin_top = 27.0
margin_right = 573.0
margin_bottom = 28.0
color = Color( 0, 0, 0, 1 )

[node name="OptionButton" type="OptionButton" parent="ColorRect"]
visible = false
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = 40.0
margin_top = -189.0
margin_right = 290.0
margin_bottom = -139.0
rect_pivot_offset = Vector2( -364, 280 )

[node name="DeleteAssignmentBtn" type="Button" parent="ColorRect"]
anchor_left = 0.49
anchor_top = 0.5
anchor_right = 0.49
anchor_bottom = 0.5
margin_left = -451.76
margin_top = 69.0
margin_right = -201.76
margin_bottom = 119.0
rect_pivot_offset = Vector2( 280, 40 )
text = "Delete Assignment"

[node name="AddAssignmentBtn" type="Button" parent="ColorRect"]
visible = false
anchor_left = 0.49
anchor_top = 0.5
anchor_right = 0.49
anchor_bottom = 0.5
margin_left = -451.76
margin_top = 159.0
margin_right = -201.76
margin_bottom = 209.0
rect_pivot_offset = Vector2( 280, 40 )

[connection signal="request_completed" from="HTTPRequest" to="." method="_on_HTTPRequest_request_completed"]
[connection signal="pressed" from="ColorRect/BackToClassroomBtn" to="." method="_on_BackToClassroomBtn_pressed"]
